<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DDDADA"
    tools:context=".HomeActivity">
    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp">

            <ImageButton
                android:id="@+id/imageButton6"
                android:layout_width="150dp"

                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/bike"
                app:srcCompat="@drawable/ic_baseline_electric_car_24"
                android:background="@drawable/bg_radius"

                tools:ignore="SpeakableTextPresentCheck,DuplicateSpeakableTextCheck"
                android:padding="25dp"
                />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="GO"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:padding="25dp"
                android:layout_gravity="center_horizontal"/>

            <ImageButton
                android:id="@+id/imageButton5"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/car_99"
                app:srcCompat="@drawable/ic_baseline_electric_bike_24"
                android:background="@drawable/bg_radius"
                tools:ignore="SpeakableTextPresentCheck,DuplicateSpeakableTextCheck"
                android:padding="25dp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp">

            <ImageButton
                android:id="@+id/imageButton8"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_baseline_local_police_24"
                tools:ignore="SpeakableTextPresentCheck"
                android:background="@drawable/bg_radius"
                android:contentDescription="@string/fireb"
                android:padding="25dp"

                />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="IN"
                android:gravity="center"
                android:textSize="30sp"
                android:textStyle="bold"
                android:padding="25dp"/>

            <ImageButton
                android:id="@+id/imageButton7"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                app:srcCompat="@drawable/ic_baseline_fire_extinguisher_24"
                tools:ignore="SpeakableTextPresentCheck"
                android:padding="25dp"

                android:background="@drawable/bg_radius"
                android:contentDescription="@string/police00" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <Button
                android:id="@+id/reservation_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Reservation"
                tools:ignore="DuplicateSpeakableTextCheck"
                android:padding="25dp"
                android:layout_margin="10dp"
                android:background="@drawable/bg_radius"
                />

            <Button
                android:id="@+id/publicrev_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Public"
                android:padding="25dp"
                android:layout_margin="10dp"
                android:background="@drawable/bg_radius"
                />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>